--- a/adminpanel/package.json
+++ b/adminpanel/package.json
@@ -56,8 +56,8 @@
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
-    "build": "react-scripts build && gulp licenses",
-    "test": "react-scripts test",
+    "build": "react-scripts --openssl-legacy-provider build && gulp licenses",
+    "test": "react-scripts --openssl-legacy-provider test",
     "eject": "react-scripts eject",
     "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm start",
     "compile-sass": "node-sass --importer node_modules/node-sass-package-importer/dist/cli.js src/assets/scss/black-dashboard-pro-react.scss src/assets/css/black-dashboard-pro-react.css",
