--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
-DATABASE_URL = mongodb+srv://valerrivapirov:5XC4atqtWI1nbpGe@developing.wbeh2.mongodb.net/matematch?retryWrites=true&w=majority&appName=developing
 
+#DATABASE_URL = mongodb+srv://valerrivapirov:5XC4atqtWI1nbpGe@developing.wbeh2.mongodb.net/matematch?retryWrites=true&w=majority&appName=developing
+DATABASE_URL = mongodb+srv://doadmin:30yY47F65l98hgKe@db-mongodb-nyc3-51298-4106d88e.mongo.ondigitalocean.com/dating?tls=true&authSource=admin&replicaSet=db-mongodb-nyc3-51298
