--- a/backend/package.json
+++ b/backend/package.json
@@ -22,7 +22,8 @@
     "jwt-decode": "^2.2.0",
     "mongoose": "^5.9.16",
     "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "axios": "^1.3.4",
