--- a/backend/package.json
+++ b/backend/package.json
@@ -17,12 +17,13 @@
     "csv-writer": "^1.6.0",
     "dotenv": "^8.6.0",
     "express": "^4.17.1",
-    "express-validator": "^6.5.0",
+    "express-validator": "^6.15.0",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^2.2.0",
     "mongoose": "^5.9.16",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.16",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
